# NASA-RMC-2020

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt
autonomy/: CMakeLists.txt  README.md  package.xml  setup.py
autonomy/action/: GoToGoal.action
autonomy/launch/: autonomy.launch  autonomy_interface.launch  gazebo_simulator.launch  main.launch  simulator.launch
autonomy/msg/: goToGoal.msg  robotState.msg  sensorValue.msg  sensor_value.msg  transitControlData.msg  transitPath.msg
autonomy/nodes/: arc_turn_manual_node.py  autonomy_node.py  cmd_to_wheel_speeds_node.py  robot_state_machine_node.py  robot_state_node.py  simulator_node.py  transit_node.py  transit_test_module.py  visualizer_node.py
autonomy/params/: autonomy_glennobi.yaml  autonomy_simulator.yaml
autonomy/params/path_planning/: costmap_global.yaml  costmap_local.yaml  local_trajectory_planner.yaml
autonomy/src/: TransitTestModule.py  simulator.py  transit_node.py  visualizer.py
autonomy/src/Automodule/: ArcTurnManual.py  TransitTestModule.py  autonomy_node.py  robot_state.py  (+1 more)
autonomy/srv/: RobotState.srv  start.srv
client/: CMakeLists.txt  package.xml  plugin.xml  setup.py
client/include/: robotInterface.py
client/msg/: sensorValue.msg
client/resource/: MyPlugin.ui
client/scripts/: clientMain.py  robotInterface.py
client/src/: clientMain.py  hwctrl_manual_test.py
client/srv/: MotorControl
custom_gazebo_plugins/: CMakeLists.txt  custom_gazebo_ros_p3d.h  custom_p3d_plugin.cpp  package.xml
doc/: Notes  (+2 more)
excavation/: CMakeLists.txt  README.md  package.xml  setup.py
excavation/config/: mechs_params.yaml
excavation/launch/: excavation.launch  sm_atomic.launch  sm_mechs.launch
excavation/nodes/: dumper_node.py  excavation_simulator_node.py  excavator_deploy_node.py
excavation/src/: behavior_tree_factory.cpp  my_tree.xml  sm_atomic_node.cpp  sm_deposition_node.cpp
glenn_msgs/: CMakeLists.txt  package.xml
glenn_msgs/action/: GoToGoal.action
glenn_msgs/msg/: ExtraSensorValues.msg  ModelCoefficientsArray.msg  TransitControlData.msg
glenn_msgs/srv/: EffectiveRPM.srv  RobotState.srv  StartAutonomy.srv
glenn_simulation/: CMakeLists.txt  package.xml  setup.py
glenn_simulation/custom_gazebo_plugins/: CMakeLists.txt  package.xml
glenn_simulation/nodes/: generate_height_map_node.py
glenn_simulation/randomize_arena/: setup.py
hwctrl/: .clang-format  .gitignore  3  CC.md  CMakeCache.txt  CMakeLists.txt  PrecompiledHeader.cmake  \  compile_commands.json  cross.sh  cross_compile.sh  cross_compile_setup.sh  cross_setup.sh  defaults.yaml  package.xml  setup.py
hwctrl/include/: ads1120.h  adt7310.h  buffer.h  canbus.h  crc.h  datatypes.h  gpio.h  hwctrl.h  lsm6ds3.h  parse_csv.h  pch.h  quad_encoder.h  sabertooth.h  spi.h  types.h  util.h  uwb.h  vesc.h
hwctrl/launch/: hwctrl.launch
hwctrl/log/: latest_list
hwctrl/msg/: CanFrame.msg  DriveMotorCmd.msg  Encoders.msg  LimitSwState.msg  MotorCmd.msg  MotorData.msg  SensorData.msg  SetMotorMsg.msg  UwbData.msg  VescData.msg
hwctrl/params/: hwctrl_params.yaml
hwctrl/src/: ads1120.cpp  buffer.cpp  can_node.cpp  canbus.cpp  crc.cpp  gpio.cpp  hwctrl.cpp  hwctrl_cal.cpp  hwctrl_cal_node.cpp  hwctrl_node.cpp  led_node.cpp  lsm6ds3.cpp  motors.cpp  parse_csv.cpp  quad_encoder.cpp  quick_test.py  sabertooth.cpp  sensors.cpp  spi.cpp  util.cpp  uwb.cpp  vesc.cpp
hwctrl/srv/: LED.srv  SetMotor.srv  SetVescCmd.srv
hwctrl/test/: file_test.cpp  testing.cpp  util_test.cpp
hwctrl2/: CMakeLists.txt  package.xml  setup.py
hwctrl2/include/: hwctrl.h  types.h  util.h
hwctrl2/msg/: LimitSwState.msg  SetMotorMsg.msg
hwctrl2/src/: hwctrl_node.cpp  util.cpp
imu_calibrator/: CMakeLists.txt  package.xml
imu_calibrator/src/: imu_calibrator_node.cpp
mechs/: CMakeLists.txt  package.xml  setup.py
mechs/config/: mechs_params.yaml
mechs/include/: dummy_nodes.h
mechs/launch/: sm_atomic.launch  sm_mechs.launch
mechs/nodes/: dumper_node.py  excavation_simulator_node.py  excavator_deploy_node.py  excavator_node.py
mechs/src/: dumper.py  excavation_simulator.py  excavator.py
navigation/: CMakeLists.txt  package.xml  setup.py
navigation/launch/: glenn_configuration.launch  move_base.launch  navigation.launch  realsense_camera.launch
navigation/maps/: arena_map.yaml
obstacle_detection/: CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
obstacle_detection/include/: realsense_utils.py
obstacle_detection/launch/: obstacle_detection.launch
obstacle_detection/maps/: arena_map.yaml
obstacle_detection/msg/: Obstacle.msg  Path.msg
obstacle_detection/nodes/: global_occupancy_grid_node.py  obstacle_detection_node.py  obstacle_kalman_tracker_node.py  realsense_motion_tracking_node.py  realsense_runner_node.py
obstacle_detection/params/: obstacle_detection_params.yaml
obstacle_detection/src/: global_occupancy_grid.py  obstacle_detection_node.py  point_cloud_decimator.cpp  point_cloud_icp_odometry.cpp  point_cloud_normal_estimator.cpp  realsense_motion_tracking.py  realsense_runner.py  realsense_utils.py
open_loop_move/: CMakeLists.txt  README.md  package.xml
open_loop_move/launch/: open_loop_move.launch
open_loop_move/src/: open_loop_move_node.cpp  trapezoidal_profile.cpp
open_loop_move/srv/: OpenLoopMove.srv
uwb_localization/: CMakeLists.txt  README.md  package.xml  setup.py
uwb_localization/include/: unscented_localization.py
uwb_localization/launch/: ekf_template.launch  localization.launch  sbg_driver.launch
uwb_localization/nodes/: imu_listener_node.py  kalman_filter_listener.py  kalman_filter_listener_node.py  localization_listener_node.py  particle_filter_localization_node.py  wheel_odom_node.py
uwb_localization/params/: ekf_dual.yaml  ekf_map.yaml  ekf_odometry.yaml  ekf_template.yaml  ellipse_A_NASA.yaml  uwb_locations.yaml
uwb_localization/scripts/: bag_sensor_reader.py
uwb_localization/src/: imu_listener.py  kalman_filter_listener.py  localization_listener.py  node_startup_test.py  trajectory_prediction.py  triangulation.py
uwb_localization/srv/: EffectiveRPM.srv
(+354 files in other folders)
